Fixed z-index clickable issues. Ruined slide 5.

--- a/styles/style.css
+++ b/styles/style.css
@@ -101,14 +101,17 @@ body {
 
 /* Slide 5 */
 #slide-5 {position: relative;}
-#slide-5 .bcg {background-image:url('../images/nature5.jpg')}
+#slide-5 .bcg {background-image:url('../images/nature5.jpg');
+	/*position: fixed; bottom: 0; left: 0;*/
+	z-index: -3
+}
 #slide-5 .bcg2 {
     background-image:url('../images/nature5-blurred.jpg');
     position: fixed; bottom: 0; left: 0;
-    opacity: 0; z-index: 1
+    opacity: 0; z-index: -2
 }
 #slide-5 .bcg3 {
     background: none; background-color: #010101;
     position: fixed; bottom: 0; left: 0;
-    opacity: 0; z-index: 2
+    opacity: 0; z-index: -1
 }
